--- a/Modern Business theme/commercial.html
+++ b/Modern Business theme/commercial.html
@@ -226,22 +226,19 @@
             <!-- logo-showcase -->            
             <div id="logo-showcase-gray" class="util-carousel logo-showcase-gray">
               <div class="item">
-                <a href="#"><img src="img/jquery_t.png" alt="" /></a>
+                <a href="#"><img src="img/b-moore.png" alt="" /></a>
               </div>
               <div class="item">
-                <a href="#"><img src="img/wordpress_t.png" alt="" /></a>
+                <a href="#"><img src="img/behr.png" alt="" /></a>
               </div>
               <div class="item">
-                <a href="#"><img src="img/envato_t.png" alt="" /></a>
+                <a href="#"><img src="img/minwax.png" alt="" /></a>
               </div>
               <div class="item">
-                <a href="#"><img src="img/nodejs_t.png" alt=""  /></a>
+                <a href="#"><img src="img/cabot.png" alt=""  /></a>
               </div>
               <div class="item">
-                <a href="#"><img src="img/maxcdn_t.png" alt="" /></a>
-              </div>
-              <div class="item">
-                <a href="#"><img src="img/mozilla_t.png" alt="" /></a>
+                <a href="#"><img src="img/farrow.png" alt="" /></a>
               </div>
             </div>
             <!-- end logo showcase -->
